--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
         {
             "background_music":
             [
-                "music/"
+                "music/videoplayback (5).mp3"
             ]
         }
     }
